# Fiery

./: CMakeLists.txt  main.c  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
